<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/bg_color"
    tools:context=".Login">

    <EditText
        android:id="@+id/Email_Login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:textSize="14sp"
        android:elevation="6dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:background="@drawable/edit"
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:drawablePadding="10dp"
        android:layout_margin="14dp"/>

    <EditText
        android:id="@+id/Pass_Login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:paddingStart="10dp"
        android:elevation="6dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/edit"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:layout_margin="14dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/don_t_have_an_account"
            android:gravity="center"/>

        <TextView
            android:onClick="regis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/register"
            android:textColor="@color/edit_text"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:onClick="btnLogin"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:text="@string/login"
            android:background="@drawable/button"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progree_bar_login"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="20dp"
        android:padding="2dp"
        android:visibility="invisible" />



</LinearLayout>